<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/my_store" />
        <item
            android:id="@+id/nav_wish"
            android:icon="@drawable/ic_star_border"
            android:title="@string/my_wishlist" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_information"
                android:icon="@drawable/ic_info"
                android:title="@string/information" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
