<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:windowSoftInputMode="adjustResize"
    tools:context="id.my.asmith.rizalapps.views.activity.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/layout_01"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/fullnameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/full_name"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:theme="@style/PrimaryFocus"/>

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/phone_number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:theme="@style/PrimaryFocus"/>

        <EditText
            android:id="@+id/emailText_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:theme="@style/PrimaryFocus"/>

        <EditText
            android:id="@+id/passwordText_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:padding="20dp"
            android:layout_marginTop="5dp"
            android:theme="@style/PrimaryFocus" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_01"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/regisButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/button"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</RelativeLayout>
