<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.my.asmith.rizalapps.views.activity.ProfileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layInput"
            android:visibility="gone">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userPic"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorPrimary"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editFname"
                android:layout_below="@+id/userPic"
                android:layout_alignParentStart="true"
                android:hint="@string/text_full_name"
                android:inputType="textPersonName"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/text_date_of_birth"
                android:textSize="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/btnBirth"
                android:layout_below="@+id/editFname"
                android:layout_alignRight="@+id/editPN"
                android:layout_alignEnd="@+id/editPN"
                android:layout_toRightOf="@+id/editTempat"
                android:layout_toEndOf="@+id/editTempat"
                tools:ignore="SpUsage" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editPN"
                android:hint="@string/text_phone_number"
                android:inputType="phone"
                android:layout_below="@+id/spinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/editEmail"
                android:layout_alignEnd="@+id/editEmail" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editEmail"
                android:hint="@string/email"
                android:editable="false"
                android:focusable="false"
                android:inputType="textLongMessage"
                android:layout_below="@+id/editPN"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/editFname"
                android:layout_alignEnd="@+id/editFname" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTempat"
                android:hint="@string/text_place_of_birth"
                android:layout_below="@+id/editFname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/userPic"
                android:layout_alignEnd="@+id/userPic" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:background="#dfdfdf"
                android:layout_below="@+id/editTempat"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/btnBirth"
                android:layout_alignEnd="@+id/btnBirth" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_ud"
                android:layout_below="@+id/editEmail"
                android:text="Submit"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit_ud"
                android:text="Cancel"
                android:id="@+id/cancel_ud"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layOutput"
            android:visibility="visible"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userPicOutput"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorPrimary"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fullnameOutput"
                android:layout_below="@+id/userPicOutput"
                android:hint="Full Name"
                android:layout_marginTop="25dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/birthOutput"
                android:layout_below="@+id/fullnameOutput"
                android:hint="Birth"
                android:layout_marginTop="15dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genderOutput"
                android:layout_below="@+id/birthOutput"
                android:layout_marginTop="15dp"
                android:hint="Gender"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneOutput"
                android:layout_below="@+id/genderOutput"
                android:hint="Phone"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailOutput"
                android:layout_below="@id/phoneOutput"
                android:hint="Email"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailOutput"
                android:layout_marginTop="10dp"
                android:id="@+id/btnEditProfile"
                android:hint="Edit Profile"/>

        </RelativeLayout>

        <Button
            android:id="@+id/beaSelller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:text="@string/jadi_penjual"/>
    </RelativeLayout>
</RelativeLayout>
